compiler/zrc_codegen/src/expr/snapshots/zrc_codegen__expr__mem__tests__union_property_access_in_expr_position.snap
---
source: compiler/zrc_codegen/src/expr/mem.rs
description: "union U { x: i32, y: i8 }\nfn take_i32(x: i32);\nfn take_i8(x: i8);\n\nfn test() {\n    let x: U;\n\n    // TEST: the pointer is cast and then read from as an i32\n    take_i32(x.x);\n\n    // TEST: the pointer is cast and then read from as an i8\n    take_i8(x.y);\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

declare {} @take_i32(i32)

declare {} @take_i8(i8)

define {} @test() !dbg !3 {
entry:
  %let_x = alloca i32, align 4
  %load = load i32, ptr %let_x, align 4, !dbg !8
  %call = call {} @take_i32(i32 %load), !dbg !8
  %load1 = load i8, ptr %let_x, align 1, !dbg !11
  %call2 = call {} @take_i8(i8 %load1), !dbg !11
  ret {} zeroinitializer, !dbg !12
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 5, type: !4, scopeLine: 5, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !DILocation(line: 9, column: 14, scope: !9)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 5, column: 11)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 5, column: 11)
!11 = !DILocation(line: 12, column: 13, scope: !9)
!12 = !DILocation(line: 13, column: 1, scope: !9)
